# BandHiC-Master

./: .buildinfo  .bumpversion.cfg  .gitignore  README.md  api.html  environment.yml  index.html  pyproject.toml  pytest.ini  requirements.txt  searchindex.js  setup.py
.github/workflows/: python-publish-pages.yml  python-publish.yml
_autosummary/: bandhic.band_hic_matrix.html  bandhic.cooler_chr.html  bandhic.eye.html  bandhic.ones_like.html  bandhic.read_hic_chr.html  bandhic.zeros.html  bandhic.zeros_like.html
_modules/: index.html
_sources/: usage.rst.txt
_sources/_autosummary/: bandhic.eye.rst.txt  bandhic.ones.rst.txt
bandhic/: __init__.py  _create.py  _io.py  _test_utils.py  _ufunc.py  bandhic.py
bandhic/utils/: HiCKRy.py  topdom.py
docs/source/: api.rst  conf.py  index.rst  tutorials.rst
docs/source/_autosummary/: bandhic.band_hic_matrix.rst  bandhic.compute_bin_bias.rst  bandhic.cooler_all_cells_all_chrs.rst  bandhic.cooler_chr_all_cells.rst  bandhic.full.rst  bandhic.load_npz.rst  bandhic.matrix_equal.rst  bandhic.save_npz.rst  bandhic.straw_all_chrs.rst
docs/source/api/: bandhic.rst  utils.rst
docs/source/quickstart/: installation.rst
test/: bandHiC_benchmark.py  bandhic_mask_row_test.py  bandhic_test.py  samples.ipynb  topdom_benchmark.py
