[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bandhic"
version = "0.1.1"
description = "A memory-efficient Python package for managing and analyzing Hi-C data down to sub-kilobase resolution"
authors = [
  { name="Weibing Wang", email="wangweibing@xidian.edu.cn" }
]
readme = { file = "README.md", content-type = "text/markdown" }
license = {text = "MIT"}
dependencies = [
    "numpy>=1.26",
    "pandas>=2.3",
    "scipy>=1.16",
    "cooler>=0.10",
    "hic_straw>=1.3"
]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.black]
line-length = 79
